<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">


    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchSecondActivity"
        android:text="@string/button_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:hint="@string/enter_your_message"
        android:layout_marginLeft="10dp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="694dp" />

    <TextView
        android:id="@+id/reply_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replyTitle"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="18dp" />

    <TextView
        android:id="@+id/reply_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reply_title"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="52dp"
        tools:ignore="UnknownId" />
</androidx.constraintlayout.widget.ConstraintLayout>