<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    tools:ignore="MissingClass">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_received"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="24dp"
        android:textStyle="bold"
        android:textSize="16sp"
        tools:layout_editor_absoluteY="17dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHeader"
        tools:layout_editor_absoluteX="25dp"
        android:layout_margin="16dp"
        tools:layout_editor_absoluteY="66dp" />

    <Button
        android:id="@+id/reply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reply"
        android:onClick="launchMainActivity"
        tools:layout_editor_absoluteX="301dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        tools:layout_editor_absoluteY="667dp" />

    <EditText
        android:id="@+id/reply_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_your_reply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="665dp" />

</androidx.constraintlayout.widget.ConstraintLayout>